--- a/app/partials/guest/login.html
+++ b/app/partials/guest/login.html
@@ -1,49 +1,95 @@
-<ng-include src="'partials/guest/header.html'"></ng-include>
+<div style="background-image: url('img/home.jpg');background-position:top center; background-repeat:no-repeat;height:800px">
+    <div class="container" style="width: 999px" >
+        <div style="padding-top: 10px;padding-bottom: 10px">
+           <div  style="background-image: url(''); background-repeat:no-repeat;height: 40px">
+        </div>
+        <div class="row-fluid" style="background-color:white">
+            <div class="span8" style="background-color:#FAFAFA">
+                <div style="background-color:#FAFAFA;border-bottom-color:#E6E6E6;border-bottom-style:solid;border-bottom-width:1px;color:#333;font-size:24px;
+                padding-left:30px;padding-bottom:17px;padding-top:17px;font-style:italic;display:block;line-height:32px">
+                    分享声音，从这里开始
+                    <span style="font-size: 13px;padding-left: 130px">
+                     还没有Wowoice账号？
+                    <a type="submit"
+                            class="button glow button-flat-highlight button-small"
+                            href="#/guest/register">马上注册
+                    </a>
+                    </span>
+                </div>
+                <div style="padding: 30px;padding-bottom: 50px">
+                <img src="img/login.jpg" />
+                </div>
+            </div>
 
-<div class="row-fluid" style="background-image: url(img/home.jpg);background-position:center center; height:800px" >
-<div class="span8">
-</div>
+            <div class="span4">
+                <form name="login" class="form-horizontal" style="padding-top: 70px;padding-bottom: 120px">
+                    <div class="control-group">
+                        <div class="controls" style="margin-left: 20px">
+                            <div class="{{loginMsgClass}}" style="font-size: 12px">
+                                {{ loginMsg}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="controls" style="margin-left: 40px">
+                            <div class="input-prepend">
+                                <span class="add-on"><i class="icon-user"></i></span>
+                                <input type="text" id="inputEmail" class="input-medium" placeholder="邮箱/用户名"
+                                       ng-model="userId" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="controls" style="margin-left: 40px">
+                            <div class="input-prepend">
+                                <span class="add-on"><i class="icon-lock"></i></span>
+                                <input type="password" id="inputPassword" class="input-medium" placeholder="密码"
+                                       ng-model="password" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="controls" style="margin-left: 40px">
+                            <button type="submit" ng-disabled="login.$invalid"
+                                    class="button glow button-flat-primary button-small" style="width: 190px"
+                                    ng-click="toLogin()">登陆
+                            </button>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="controls" style="margin-left: 40px">
+                            <div style="color: gray; font-size: 12px">
+                                <span><input type="checkbox" ng-model="rememberUser"
+                                             ng-true-value=true ng-false-value=false> 保持登录状态</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="controls" style="margin-left: 40px">
+                            <div style="color: gray; font-size: 12px">
+                                <a href="#/guest/register">立即注册！</a> <a href="#/guest/forgetPass"
+                                                                        style="padding-left: 70px">忘了密码</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="controls" style="margin-left: 40px;margin-right: 70px;border-top-color:#F2F2F2;border-top-style:solid;border-top-width:1px">
+                            <div style="margin-top: 10px">
+                                <a href="" title="新浪微博账号登陆" style="text-decoration:none"><i class="icon-weibo icon-2x" style="color: #808080"></i></a>
+                                <a href="" title="人人账号登陆" style="text-decoration:none;padding-left: 15px"><i class="icon-renren icon-2x" style="color: #808080"></i></a>
+                                <a href="" title="Google+账号登陆" style="text-decoration:none;padding-left: 15px"><i class="icon-google-plus icon-2x" style="color: #808080"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
 
-<div class="span4">
-<form name="login" class="form-horizontal" style="padding-top: 120px;padding-bottom: 120px">
-    <div class="control-group">
-        <div class="controls">
-            <div class="{{loginMsgClass}}" style="font-size: 12px">
-                {{ loginMsg}}
+            <div style="background-color:#F7F7F8;background-attachment: scroll;background-clip: border-box;background-image: url(img/footer_top_bg.jpg) ;
+            background-position:top center; background-repeat:no-repeat;background-origin: padding-box;">
+                <p style="font-size: 12px;color: gray;padding-left: 30%;background-clip:border-box;background-size:auto;padding-bottom: 20px;padding-top: 15px;">
+                    Copyright © 2013 WOWOICE       <span style="padding-left: 30px">沪ICP备13042199号-2</span></p>
             </div>
-        </div>
-     </div>
-    <div class="control-group">
-        <div class="controls">
-            <div class="input-prepend">
-                <span class="add-on"><i class="icon-user"></i></span>
-                <input type="text" id="inputEmail" class="input-small" placeholder="邮箱/用户名" ng-model="userId" required>
-             </div>
-        </div>
     </div>
-    <div class="control-group">
-        <div class="controls">
-            <div class="input-prepend">
-                <span class="add-on"><i class="icon-lock"></i></span>
-                <input type="password" id="inputPassword" class="input-small" placeholder="密码" ng-model="password" required>
-            </div>
-        </div>
-    </div>
-    <div class="control-group">
-        <div class="controls">
-            <!--<label class="checkbox" style="font-size: 10px">-->
-                <!--&lt;!&ndash;<input type="checkbox" style="color: gray">给我记住&ndash;&gt;-->
-            <!--</label>-->
-            <button type="submit" ng-disabled="login.$invalid" class="button glow button-flat-primary button-small" style="width: 130px" ng-click="toLogin()">登陆</button>
-        </div>
-    </div>
-     <div class="control-group">
-        <div class="controls">
-            <div style="color: gray; font-size: 12px">
-                <a href="#/guest/register" >立即注册！</a>                  <a href="#/guest/forgetPass" style="padding-left: 18px">忘了密码</a>
-            </div>
-        </div>
-    </div>
-</form>
 </div>
 </div>
