--- a/app/partials/auth/confirm.html
+++ b/app/partials/auth/confirm.html
@@ -1,6 +1,10 @@
 <ng-include src="'partials/guest/header.html'"></ng-include>
 <div>
-    <div style="text-align: center">
-        <h3>{{result}}</h3>
+    <div class="container" style="padding-top:65px;width: 900px">
+        <div>
+            <legend>身份认证</legend>
+            <span style="padding-left: 30px;"><a href="#"><i class="icon-home"></i> 返回首页</a></span>
+            <h4 style="padding-left: 30px;padding-top: 30px">{{result}}</h4>
+        </div>
     </div>
 </div>
