--- a/app/partials/commonStream.html
+++ b/app/partials/commonStream.html
@@ -21,7 +21,7 @@
                 </div>
                 <div ng-if="recommendUsers.length > 0">
                     <div ng-repeat="recommendUser in recommendUsers" style="float:left" ng-click="toogleFollow()">
-                        <div style="text-align:center; padding-right: 8px; height: 90px">
+                        <div style="text-align:center; padding-right: 8px; height: 90px" ng-show="$index < 4">
                             <div class="user {{recommendUser.class}}">
                                 <a href="#" onclick="return false;">
                                     <img style="width: 60px;height: 60px" ng-src="{{recommendUser.profile.avatorUrl}}">
@@ -45,7 +45,7 @@
                     </legend>
                     <div ng-if="recommendSounds.length > 0">
                         <div ng-repeat="recommendSound in recommendSounds" style="float:left" ng-click="toogleFollow()">
-                            <div style="text-align:center; padding-right: 8px; height: 90px">
+                            <div style="text-align:center; padding-right: 8px; height: 90px" ng-show="$index < 5">
                                 <div>
                                     <a href='{{recommendSound.route}}'>
                                         <img style="width: 60px;height: 60px" ng-src="{{recommendSound.profile.poster.url}}">
