--- a/app/partials/copyright.html
+++ b/app/partials/copyright.html
@@ -2,13 +2,13 @@
 
 <div  class="container">
     <div style="padding-bottom: 30px">
-        <legend>Wooice版权保护指导</legend>
-        作为音乐创作者的平台，Wooice希望每一位用户都能尊重他人的版权。如果您发现Wooice平台中有内容侵犯了您的版权，请<a href="#/infringement">举报侵权</a>
+        <legend>WOWOICE版权保护指导</legend>
+        作为音乐创作者的平台，Wowoice希望每一位用户都能尊重他人的版权。如果您发现Wowoice平台中有内容侵犯了您的版权，请<a href="#/infringement">举报侵权</a>
         <ul>
             <li><a href="#/copyright/#whats-copyright">什么是版权？</a></li>
             <li><a href="#/copyright#copyright-detial">版权有哪些权利？</a></li>
             <li><a href="#/copyright#infringement">什么是版权侵权？</a></li>
-            <li><a href="#/copyright#wooice-copyright">Wooice的版权保护</a></li>
+            <li><a href="#/copyright#wooice-copyright">Wowoice的版权保护</a></li>
             <li><a href="#/copyright#whats-copyright">更多信息</a></li>
         </ul>
         <span style="color: gray;font-size: 9px">声明: 本页内容介绍了基本的版权知识，但并非专业的法律指导。任何关于版权的具体问题，请咨询相关法律部门或律师。</span>
@@ -47,10 +47,10 @@
     </div>
 
     <div style="padding-bottom: 30px">
-        <p name="wooice-copyright" style="font-size: 22px">Wooice的版权保护</p>
+        <p name="wooice-copyright" style="font-size: 22px">Wowoice的版权保护</p>
 
         <p style="font-size: 14px">由于版权保护相关的法律法规非常复杂，如果您有任何疑虑，请咨询相关法律部门或律师，特别是在上传音乐或维护版权之前。
-            Wooice列出了一些通用的事项来帮助您做出基本的判断：</p>
+            Wowoice列出了一些通用的事项来帮助您做出基本的判断：</p>
 
         <div>
             <p style="font-size: 14px">音乐上传前请确认：</p>
