--- a/app/partials/guest/header.html
+++ b/app/partials/guest/header.html
@@ -1,9 +1,12 @@
 <div class="navbar"  style="margin-bottom:0px" ng-controller="headerCtrl">
     <div class="navbar-inner">
         <a class="brand" href="#" title="Wooice">
-            <img width="78"  src="img/logo.jpg"/>
+            <img style="width: 78px;height: 40px" src="img/logo.jpg"/>
         </a>
-        <ul class="nav">
+        <ul class="nav  pull-right">
+            <li>
+                <a title="已有账号登陆" href="#/guest/login"><i class="icon-signin" style="color: white"></i></a>
+            </li>
         </ul>
     </div>
 </div>
