--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -1,4 +1,4 @@
-<div id="sound_streams" ng-controller="streamCtrl">
+<div id="sound_streams" ng-controller="streamCtrl" style="padding-top: 15px">
     <a href="#" onclick="return false;" ng-click="loadStream('true')" class="pull-right"><i
             class="icon-refresh"></i></a>
 
