--- a/app/partials/user/nav.html
+++ b/app/partials/user/nav.html
@@ -15,7 +15,7 @@
 
         <li>
         <a href="#" onclick="return false;" ng-click="jumpTo('changePass')" style="width: 100%">
-            更改密码    <i class="icon-chevron-right pull-right" style="font-size:12px ;color: gray;padding-top: 6px"></i>
+            密码管理    <i class="icon-chevron-right pull-right" style="font-size:12px ;color: gray;padding-top: 6px"></i>
         </a>
         </li>
     </ul>
