--- a/app/partials/iframe.html
+++ b/app/partials/iframe.html
@@ -1,3 +1,3 @@
 <div style="width: 900px">
-<iframe width="100%" height="188px" scrolling="no" frameborder="no" src="http://localhost:8080/Site/app/index.html#/player/normal-1"></iframe>
+<iframe width="100%" height="188px" scrolling="no" frameborder="no" src="http://localhost:8080/Site/app/index.html#/player/aaaaa-1"></iframe>
 </div>
