--- a/app/partials/user/changePass.html
+++ b/app/partials/user/changePass.html
@@ -1,4 +1,5 @@
-<div class="container" style="padding-top:65px" ng-controller="submitChangePassCtrl">
+<div  ng-controller="submitChangePassCtrl">
+    <legend>密码管理</legend>
     <div>
         <form name="the_form" class="form-horizontal">
             <div class="control-group">
@@ -7,7 +8,7 @@
                 </div>
             </div>
             <div class="control-group">
-                <div class="controls">
+                <div class="controls" style="margin-left: 100px">
                     为了您的账号安全，我们将发送重置密码链接邮件到您的注册邮箱，请
                     <button type="submit" class="btn" ng-click="changePass()">提交</button>
                     重置请求。
